# magic-conch

./: .gitattributes  LICENSE  pyproject.toml  setup.cfg
data/: RAVE_candidates.csv  ao_companions_1.txt  ao_companions_2.txt  ao_full.txt  asu(2).tsv  bright_kic_data-xm-rc.0.csv  bright_koi_data-xm-rc.0.csv
functions/: hex_hist.py  plot_utils.py  single_probability.py
magic-conch/data/: QVFlk0YH
magic-conch/functions/: simulate.py
magic-conch/notebooks/: RV_detection_efficiency.ipynb
magic_conch/: __init__.py  load_data.py
magic_conch/data/: SpiKeS-All-Sources-180214.csv  vizier_votable.vot
magic_conch/functions/: add_catalog.py
magic_conch/notebooks/: RV_error_distribution.ipynb
magic_conch/notebooks/.ipynb_checkpoints/: false_positive_rate-checkpoint.ipynb
notebooks/: RV_detection_efficiency.ipynb  RV_error_distribution.ipynb  false_positive_rate.ipynb
