[metadata]
name = magic_conch
description = Detecting binary companions throug Gaia rv and astrometric errors
long_description = file: README.rst
author = Quadry Chance
author_email = qchance85@gmail.com
url = https://github.com/quadrychance/magic-conch
license = BSD 3-Clause License

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    astropy
    matplotlib
    pandas
    scipy
    seaborn
